--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "morgan": "~1.0.0",
     "serve-favicon": "^2.2.0"
   },
+  "scripts": {
+    "build-js": "HOME=config/ bower install"
+  },
   "engines": {
     "node": ">=0.10.0"
   }
