--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "threejs": "*",
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "jquery-ui": "~1.11.2",
+    "seiyria-bootstrap-slider": "~4.4.1"
   }
 }
