--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "~4.2.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "requirejs": "^2.1.16",
     "serve-favicon": "^2.2.0"
   },
   "engines": {
