--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "body-parser": "~1.0.0",
     "bower": "^1.3.12",
-    "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
-    "express": "~4.2.0",
-    "jade": "~1.3.0",
-    "morgan": "~1.0.0",
     "requirejs": "^2.1.16",
-    "serve-favicon": "^2.2.0"
+    "serve-favicon": "^2.2.0",
+    "node-static": "*"
   },
   "engines": {
     "node": ">=0.10.0"
