--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bower": "^1.3.12",
     "requirejs": "^2.1.16",
     "serve-favicon": "^2.2.0",
-    "node-static": "*"
+    "paperboy": "*"
   },
   "engines": {
     "node": ">=0.10.0"
