--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "fontawesome": "latest",
     "jqueryui-touch-punch": "",
     "angular-route": "~1.3.14",
-    "angularAMD": "~0.2.1"
+    "angularAMD": "~0.2.1",
+    "angular-mocks": "~1.3.15"
   },
   "resolutions": {
     "angular": "1.3.15"
